  * dh-make-ruby:
    - fix call to wrap-and-sort
    - add -w/--overwrite option to overwrite files under debian/
    - only call wrap-and-sort if either there was no previous
      packaging, or -w/--overwrite was passed.
    - when acting on an existing source package, read the source package name
      from debian/changelog.
    - always create test suite files to make dh-make-ruby idempotent

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 16 May 2015 22:51:18 -0300

gem2deb (0.16) unstable; urgency=medium

  * Add support for a 'nocheck' build profile, and document it in
    README.source. Closes: #632776
    + Also add version restrictions on dpkg-dev and debhelper.
  * Add patch from Cédric Boutillier, from a debian-ruby@ discussion from
    2012, that makes gem2tgz pick the most recent (in terms of gem version)
    gem file, instead of just the first one, after running gem fetch.
    Closes: #733171
  * bin/dh-make-ruby: use '.' (current directory) as default target.
    Closes: #777747
  * dh-make-ruby: run wrap-and-sort after generating boilerplate from
    templates. test/unit/dh_make_ruby_test.rb also had to be modified
    to robustify the dependencies extractor. Closes: #784556
  * Run wrap-and-sort --wrap-always + minor cleanup.

 -- Lucas Nussbaum <lucas@debian.org>  Sat, 16 May 2015 11:52:39 +0200

gem2deb (0.15) unstable; urgency=medium

  * dh-make-ruby, debian/ruby-tests.rake for test/unit: add 'test' to the
    $LOAD_PATH by default, and also run tests on test/**/test_*.rb.
    (Closes: #784323)

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 06 May 2015 09:05:36 -0300

gem2deb (0.14) experimental; urgency=medium

  [ Antonio Terceiro ]
  * dh-make-ruby: fix conversion of gem names with uppercase characters into
    debian package names
  * dh_ruby: don't pass LIBDIR into command line when running different
    interpreters while installed system-wide. This avoids extra